--- a/FinKont_homework.Rmd
+++ b/FinKont_homework.Rmd
@@ -2,14 +2,15 @@
 title: "Homework (FinKont)"
 output:
   html_document:
-    toc: false
-    toc_float: true
+    toc: no
+    toc_float: yes
     code_folding: hide
 ---
 
 ```{r, include=FALSE, results = 'hide'}
 library(ggplot2)
 library(dplyr)
+#rmarkdown::render(input = "FinKont_homework.Rmd", output_format = "pdf_document")
 ```
 
 
@@ -34,7 +35,7 @@ library(dplyr)
 >
 > 1. $W_0=0$.
 > 2. The process $W$ has independent increments, i.e. if $r<s\le t< u$ then $W_u-W_t$ and $W_s-W_r$ are independent random variables.
-> 3. For $s<t$ the random variable $W_t-W_s$ has the Gaussian distribution $\mathcal{N}(0,t-s)$.
+> 3. For $s<t$ the random variable $W_t-W_s$ has the Gaussian distribution <span class="math inline"><img src="https://math.now.sh?inline=\mathcal{N}(0,t-s)" /></span>.
 > 4. $W$ has continuous trajectories i.e. $s\mapsto W(s;\omega)$ i continuous for all $\omega \in\Omega$.
 
 ```{r}
@@ -79,13 +80,29 @@ $$
 -W_0=-1\cdot 0=0.
 $$
 
-Furthermore, for $r<s\le t< u$ it holds that $W_u-W_t$ and $W_s-W_r$ is independent. By transformation invariance of the independence property $-(W_u-W_t)$ and $-(W_s-W_r)$ is independent.
+Furthermore, for $r<s\le t< u$ it holds that $W_u-W_t$ and $W_s-W_r$ is independent. By seperate transformations the independence property is preserved and $-(W_u-W_t)$ and $-(W_s-W_r)$ is independent. Next, for a normal distributed random variable $N\sim$<span class="math inline"><img src="https://math.now.sh?inline=N\sim\mathcal{N}(\mu,\sigma^2)"/></span> it holds, that for a scaler $c\in\mathbb{R}$ we have <span class="math inline"><img src="https://math.now.sh?inline=c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)" /></span>. Then obviously;
+
+<span class="math center"><img src="https://math.now.sh?inline=-(W_t)=(-1)W_t\stackrel{d}{=}\mathcal{N}((-1)\cdot0,(-1)^2(t-s))\stackrel{d}{=}\mathcal{N}( 0,t-s)."/></span>
+
+Lastly, let $\omega \in \Omega$ and consider the sample path $s\mapsto (-W_s)(\omega)$. Clearly for two continuous functions $f$ and $g$ it holds that $(g\circ f)$ is continuous. Then with $g(x)=-x$ and $f(t)=W_t(\omega)$ $(-W_t)=(g\circ W)(t)$ is also continuous.
 
 </details>
 <details>
 <summary>**Solutions (ii).**</summary>
 
+Much like the previous exercise we define a new process and show the properties hold. Let $s\ge 0$ be chosen arbitrary. Now define $X_t=W(t+s)-W(s)$.
 
+First, we let $t=0$ and see
+
+$$X_0 = W(0+s)-W(s)=W(s)-W(s)=0.$$
+
+Secondly, we have that for $r<u$:
+
+$$X_u-X_r=W(u+s)-W(s)-(W(r+s)-W(s))=W(u+s)-W(r+s)\sim N(0,u+s-(r+s))=N(0,u-r).$$
+
+and since for $r<u\le k<l$ the translation $r+s<u+s\le k+s<l+s$ still holds and $X_l-X_k=W(l+s)-W(k+s)$ and $X_u-X_r=W(u+s)-W(k+s)$ are independent.
+
+Lastly,
 
 </details>
 <details>
