--- a/QRM_projects.Rmd
+++ b/QRM_projects.Rmd
@@ -76,7 +76,8 @@ VaR_0.99
 ES_0.99
 
 hist(L_prime[L_prime>-1000], breaks = 10000)
-#Look page 80 for R_i,j; rho_tau is given in problem-text, and diag is just 1 since X is continous hence the probabilities are 1 and 0 
+#Look page 80 for R_i,j; rho_tau is given in problem-text, and diag is just 1
+#since X is continous hence the probabilities are 1 and 0 
 #(look formula section 8.5)
 ```
 
@@ -121,13 +122,15 @@ ES_0.99
 hist(L_prime, breaks = 10000)
 ```
 
+$VaR$ and $ES$ are radically different for the two copulas. This could be the case, since the Clayton copula is an archemedian copula. This matters, since an elliptical copula has radial symmetry, and thus cant distinguish the dependence between high losses and high gains like the Clayton copula can. Moreover, as in general, these 2 copulas have different dependence structure, and thus will generate different sizes of returns.  
+
 ## Problem 2
 
 ### (a) Propose an elliptical (or other) distribution which is appropriate for this data, and compute the one-day $VaR_{0.99}$ and $ES_{0.99}$.
 
 As we saw in the homework 1 assigment, that the dax returns data was approximativly t-distributed with 4 degrees of freedome, we have likewise checked the bmw returns. Down below you can see the bmw returns in a qq-plot against the residuals for a t-distribution with 4 df;
 
-```{r}
+```{r,message=FALSE,warning=FALSE}
 library(dplyr)
 dax_returns <- read.delim("data/dax_returns.txt",header = TRUE) %>% as.data.frame()
 dax_returns[,2] <- dax_returns[,1]
@@ -156,11 +159,32 @@ $$
 0.0001194 & 0.0001142
 \end{bmatrix}.
 $$
+by example 9.1 for the t-distribution with 4 degrees of freedom. The following is simulated vs emperical data;
+```{r}
+mu1 <- mean(dax_returns[,2])
+mu2 <- mean(bmw_returns[,2])
+mu <- c(mu1,mu2)
+sigma <- matrix(
+  c(var(dax_returns[,2]),
+    cov(dax_returns[,2],bmw_returns[,2]),
+    cov(dax_returns[,2],bmw_returns[,2]),
+    var(bmw_returns[,2])),
+  nrow = 2
+)
+
+library(mvtnorm)
+n <- 1700
+X <- rmvt(n,sigma=1/2*sigma, df=4) + matrix(c(rep(mu[1],n),rep(mu[2],n)),ncol = 2)
+
+library(ggplot2)
+sim_dat = data.frame(x1 = bmw_returns[,2], y1 = dax_returns[,2], x2 = X[,2], y2 = X[,1])
+ggplot(sim_dat) + geom_point(aes(x = x1, y=y1)) + geom_point(aes(x = x2, y=y2), col = "red")
+```
 
 Simulating from this multivariate distribution we are now able to calculate the losses using the formula on page 8 in HL. Doing this we can calculate value at risk and expected shortfall as per usual and we get;
 
 $$
-VaR_{0.99}\approx8.55, \hspace{30pt} ES_{0.99}\approx11.74
+VaR_{0.99}\approx6.023, \hspace{30pt} ES_{0.99}\approx8.33
 $$
 
 ```{r}
@@ -168,7 +192,13 @@ mu <- c(mu1,mu2)
 cov(dax_returns[,2],bmw_returns[,2])
 var(dax_returns[,2])
 var(bmw_returns[,2])
-sigma <- matrix(c(cov(dax_returns[,2],bmw_returns[,2]), var(dax_returns[,2]),cov(dax_returns[,2],bmw_returns[,2]), var(bmw_returns[,2])), nrow = 2)
+sigma <- matrix(
+  c(cov(dax_returns[,2],bmw_returns[,2]),
+    var(dax_returns[,2]),
+    cov(dax_returns[,2],bmw_returns[,2]),
+    var(bmw_returns[,2])),
+  nrow = 2
+)
 S_n <- 100
 
 dax_returns[,3] <- -S_n*(exp(dax_returns[,2]) - 1)
@@ -220,7 +250,7 @@ $$
 VaR_{0.99}=-w^T\cdot m+\sqrt{w^T\Sigma w}\cdot \Phi^{-1}(0.99)
 $$
 
-We compute that $VaR_{0.99}$ is 5.37. Which is significantly smaller than the estimate computed in the previous problem. This might be because the estimate $e^X\approx 1+x$ underestimates our losses. As discussed in the previous problem the t-distribution fits best to the data, which is also a problem, since we assume a normal distribution in the standard variance-covariance model. The normal distribution has lighter tails than the t distribution. This means the model might not catch the extreme events very well leading to a more moderate $VaR$ estimate.
+We compute that $VaR_{0.99}$ is 5.37. Which is smaller than the estimate computed in the previous problem. This might be because the estimate $e^X\approx 1+x$ underestimates our losses. A bigger problem might be that as discussed in the previous problem the t-distribution fits best to the data. Since we assume a normal distribution in the standard variance-covariance model the quantile is too small. The normal distribution has lighter tails than the t distribution. This means the model might not catch the extreme events very well leading to a more moderate $VaR$ estimate.
 
 ```{r}
 n <- 1700 # nrow(bmw_returns) = nrow(dax_returns) = 1700
@@ -330,10 +360,11 @@ $$
 
 Finally, one can see that $\tilde{C}$ is not a copula, since we can choose points $b=(b_1,b_2,b_3)=(1,1,1)$ and $a=(a_1,a_2,a_3)=(0.4,0.4,0.4)$ and see that the 3 dimensional version of condition (B3) in HL def 10.1 yields;
 
-$$
-    \tilde{C}(a_1,a_2,b_3)-\tilde{C}(a_1,a_2,a_3)+\tilde{C}(a_1,b_2,a_3)+\tilde{C}(b_1,a_2,a_3)+\tilde{C}(b_1,b_2,b_3)
+\begin{align*}
+    \tilde{C}(a_1,a_2,b_3)-\tilde{C}(a_1,a_2,a_3)+\tilde{C}(a_1,b_2,a_3)+\tilde{C}(b_1,a_2,a_3)\\
+    +\tilde{C}(b_1,b_2,b_3)
     -\tilde{C}(b_1,b_2,a_3)-\tilde{C}(b_1,a_2,b_3)-\tilde{C}(a_1,b_2,b_3)\\=0.4^2-0+0+0+1-0.4-0.4-0.4<0
-$$
+\end{align*}
 
 Hence since we have found points in the 3-dim space a and b, where $a_i<b_i$ and the combinations are not greater than or equal to 0, $\tilde{C}$ can not be a copula.
 
@@ -341,11 +372,11 @@ Hence since we have found points in the 3-dim space a and b, where $a_i<b_i$ and
 
 What we first want to do, is to create a copula, where each of the marginals of this copula will be another 2-dimensional copula, only using the copulas given in the homework paper ($C_{12},C_{13}\hspace{5pt}\text{and}\hspace{5pt} C_{23}$). One can easily see that if i suggest the copula $C(u_1,u_2,u_3)=u_1u_2u_3[1+\delta(1-u_2)(1-u_3)]$ this will have the right marginals since;
 
-$$
+\begin{align*}
     \frac{dC}{du_1}=u_2u_3[1+\delta(1-u_2)(1-u_3)]=C_{23}(u_2,u_3)\\
     \frac{dC}{du_2}=u_1u_3[1+\delta(1-1)(1-u_3)]=u_1u_3=C_{13}(u_1,u_3)\\
     \frac{dC}{du_3}=u_1u_2[1+\delta(1-u_2)(1-1)]=u_1u_2=C_{12}(u_1,u_2)
-$$
+\end{align*}
 
 And since all the 2-dim marginals are copulas, C must be a copula itself.
 Futhermore, we can find the C from above by using nested copulas. For instance ponder on $C(u_1,u_2,u_3)=C_{12}(u_1,C_{23}(u_2,u_3))$. Otherwise we can also create new copulas, with 2-dim marginals using nested copulas such as $C(u_1,u_2,u_3)=C_{12}(u_1,C_{13}(u_2,u_3))=u_1u_2u_3$ giving us;
@@ -601,7 +632,7 @@ $$
 i.e. $VaR_\alpha=an$ and $a=\frac{1}{n}VaR_\alpha$. Our objektive is then to find a suitable solution to the equation:
 
 $$
-\alpha =\mathbf{P}\left\{L_n>na\right\}\approx e^{-n\Lambda^*(a)},\hspace{20pt} \Lambda^*(a)=\xi_{sup}(a)\cdot a-\Lambda(\xi_{sup}(a)),
+\alpha =\mathbf{P}\left\{L_n\leq na\right\}\approx 1-e^{-n\Lambda^*(a)},\hspace{20pt} \Lambda^*(a)=\xi_{sup}(a)\cdot a-\Lambda(\xi_{sup}(a)),
 $$
 
 which in turn will give an estimate of $VaR_\alpha$. We recall that
@@ -622,7 +653,11 @@ $$
 VaR_\alpha =na=n(\Lambda^{*})^{-1}\left(-\frac{1}{n}\log(\alpha)\right).
 $$
 
-However since $\Lambda^*$ is convex it and continuous is does not have an inverse. We see that the derivative is given by
+However since $\Lambda^*$ is convex and continuous it is does not have an inverse. This expression is however numerical solvable for small $\alpha>0$.
+
+\pagebreak
+
+We see that the derivative is given by
 
 $$
 \frac{\partial}{\partial a}\Lambda^*(a)=a-\frac{p\theta}{(\theta-\xi_{sup}(a))((1-p)(\theta-\xi_{sup}(a))+p\theta)}\xi'_{sup}(a)
