--- a/FinKont_homework.Rmd
+++ b/FinKont_homework.Rmd
@@ -33,10 +33,10 @@ library(dplyr)
 
 >**Definition 4.1.** *(Brownian motion)* A stochastic process $W$ is called a **Brownian motion** or **Wiener process** if the following conditions hold
 >
-> 1. $W_0=0$.
-> 2. The process $W$ has independent increments, i.e. if $r<s\le t< u$ then $W_u-W_t$ and $W_s-W_r$ are independent random variables.
-> 3. For $s<t$ the random variable $W_t-W_s$ has the Gaussian distribution <span class="math inline"><img src="https://math.now.sh?inline=\mathcal{N}(0,t-s)" /></span>.
-> 4. $W$ has continuous trajectories i.e. $s\mapsto W(s;\omega)$ i continuous for all $\omega \in\Omega$.
+> 1. <img class="math inline"  src="https://math.vercel.app?inline=W_0=0"/>.
+> 2. The process <img class="math inline"  src="https://math.vercel.app?inline=W"/> has independent increments, i.e. if <img class="math inline"  src="https://math.vercel.app?inline=r<s\le t< u"/> then <img class="math inline" src="https://math.vercel.app?inline=W_u-W_t"/> and <img class="math inline"  src="https://math.vercel.app?inline=W_s-W_r"/> are independent random variables.
+> 3. For <img class="math inline"  src="https://math.vercel.app?inline=s<t"/> the random variable <img class="math inline"  src="https://math.vercel.app?inline=W_t-W_s"/> has the Gaussian distribution <img class="math inline"  src="https://math.vercel.app?inline=\mathcal{N}(0,t-s)" />.
+> 4. <img class="math inline"  src="https://math.vercel.app?inline=W"/> has continuous trajectories i.e. <img class="math inline"  src="https://math.vercel.app?inline=s\mapsto W(s;\omega)"/> i continuous for all <img class="math inline"  src="https://math.vercel.app?inline=\omega \in\Omega"/>.
 
 ```{r}
 #Example of trajectory for BM
@@ -63,7 +63,7 @@ data.frame(t = t, W = W) %>%
 
 **Probability exercises**
 
-Let $(W(t))_{t\ge}$ be a Brownian motion (Björk, Definition 4.1).
+Let <img class="math inline" src="https://math.vercel.app?inline=(W(t))_{t\ge}"/> be a Brownian motion (Björk, Definition 4.1).
 
 **Exercise 1.** Show that the following processes also are Brownian motions.
 
@@ -72,47 +72,90 @@ Let $(W(t))_{t\ge}$ be a Brownian motion (Björk, Definition 4.1).
  iii. For every $c>0$, $(cW(t/c^2))_{t\ge 0}$ (scaling).
 
 <details>
-<summary>**Solutions (i).**</summary>
+<summary>**Solution (i).**</summary>
 
 By assumption $W$ is a Brownian motion and so it follows that
 
-$$
--W_0=-1\cdot 0=0.
-$$
+<span class="math center"><img src="https://math.vercel.app?from=-W_0=-1\cdot0=0."/></span>
 
-Furthermore, for $r<s\le t< u$ it holds that $W_u-W_t$ and $W_s-W_r$ is independent. By seperate transformations the independence property is preserved and $-(W_u-W_t)$ and $-(W_s-W_r)$ is independent. Next, for a normal distributed random variable $N\sim$<span class="math inline"><img src="https://math.now.sh?inline=N\sim\mathcal{N}(\mu,\sigma^2)"/></span> it holds, that for a scaler $c\in\mathbb{R}$ we have <span class="math inline"><img src="https://math.now.sh?inline=c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)" /></span>. Then obviously;
+Furthermore, for $r<s\le t< u$ it holds that $W_u-W_t$ and $W_s-W_r$ is independent. By seperate transformations the independence property is preserved and $-(W_u-W_t)$ and $-(W_s-W_r)$ is independent. Next, for a normal distributed random variable <img class="math inline"  src="https://math.now.sh?inline=N\sim\mathcal{N}(\mu,\sigma^2)"/> it holds, that for a scaler $c\in\mathbb{R}$ we have <img class="math inline"  src="https://math.vercel.app?inline=c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)" />. Then obviously;
 
-<span class="math center"><img src="https://math.now.sh?inline=-(W_t)=(-1)W_t\stackrel{d}{=}\mathcal{N}((-1)\cdot0,(-1)^2(t-s))\stackrel{d}{=}\mathcal{N}( 0,t-s)."/></span>
+<span class="math center"><img src="https://math.vercel.app?from=-(W_t)=(-1)W_t\stackrel{d}{=}\mathcal{N}((-1)\cdot0,(-1)^2(t-s))\stackrel{d}{=}\mathcal{N}( 0,t-s)."/></span>
 
-Lastly, let $\omega \in \Omega$ and consider the sample path $s\mapsto (-W_s)(\omega)$. Clearly for two continuous functions $f$ and $g$ it holds that $(g\circ f)$ is continuous. Then with $g(x)=-x$ and $f(t)=W_t(\omega)$ $(-W_t)=(g\circ W)(t)$ is also continuous.
+Lastly, let $\omega \in \Omega$ and consider the sample path <img src="https://math.vercel.app?inline=s\mapsto (-W_s)(\omega)"/>. Clearly for two continuous functions $f$ and $g$ it holds that <img src="https://math.vercel.app?inline=(g\circ f)"/> is continuous. Then with $g(f)=-f$ and <img src="https://math.vercel.app?inline=f(t)=W_t(\omega)"/>$ it follows that <img src="https://math.vercel.app?inline=(-W_t)=(g\circ W)(t)"/> is also continuous.
 
 </details>
 <details>
-<summary>**Solutions (ii).**</summary>
+<summary>**Solution (ii).**</summary>
 
 Much like the previous exercise we define a new process and show the properties hold. Let $s\ge 0$ be chosen arbitrary. Now define $X_t=W(t+s)-W(s)$.
 
 First, we let $t=0$ and see
 
-$$X_0 = W(0+s)-W(s)=W(s)-W(s)=0.$$
+<span class="math center"><img src="https://math.vercel.app?from=X_0=W(0+s)-W(s)=W(s)-W(s)=0."/></span>
 
 Secondly, we have that for $r<u$:
 
-$$X_u-X_r=W(u+s)-W(s)-(W(r+s)-W(s))=W(u+s)-W(r+s)\sim N(0,u+s-(r+s))=N(0,u-r).$$
+<span class="math center"><img src="https://math.vercel.app?from=X_u-X_r=W(u+s)-W(s)-(W(r+s)-W(s))=W(u+s)-W(r+s)\sim \mathcal{N}(0,u+s-(r+s))=\mathcal{N}(0,u-r)."/></span>
 
-and since for $r<u\le k<l$ the translation $r+s<u+s\le k+s<l+s$ still holds and $X_l-X_k=W(l+s)-W(k+s)$ and $X_u-X_r=W(u+s)-W(k+s)$ are independent.
-
-Lastly,
+and since for $r<u\le k<l$ the translation $r+s<u+s\le k+s<l+s$ still holds and $X_l-X_k=W(l+s)-W(k+s)$ and $X_u-X_r=W(u+s)-W(k+s)$ are independent. Finally since $W_t(\omega)$ is continuous in $t$ hence the translation $W_{t+s}$ is continouos. Adding a constant yields a function that is also continuous, hence $X_t$ is continuous.
 
 </details>
 <details>
-<summary>**Solutions (iii).**</summary>
+<summary>**Solution (iii).**</summary>
+
+Let $c>0$ be given. We show that
+
+<span class="math center"><img src="https://math.vercel.app?from=X_t=cW\left(\frac{t}{c^2}\right)"/></span>
+
+is a Brownian motion. We simply show the four properties. Let $t=0$ and notice
+
+<span class="math center"><img src="https://math.vercel.app?from=X_0=cW\left(\frac{0}{c^2}\right)=cW(0)=0."/></span>
+
+The second property follows from seperate transformation and that for $r<u\le s<t$ we consider
+
+<span class="math center"><img src="https://math.vercel.app?from=X_u-X_r=c\left(W\left(\frac{u}{c^2}\right)-W\left(\frac{r}{c^2}\right)\right)\hspace{20pt}\text{and}\hspace{20pt}X_t-X_s=c\left(W\left(\frac{t}{c^2}\right)-W\left(\frac{s}{c^2}\right)\right)"/></span>
+
+and since $c,r,u,t,s>0$ we have the same order for the scaled version of $r,u,t,s$ and hence we have two independent RV scaled by $c$. Then by seperate transformations the variables is still independent. Next for the third property:
+
+<span class="math center"><img src="https://math.vercel.app?from=X_t-X_s=c\left(W\left(\frac{t}{c^2}\right)-W\left(\frac{s}{c^2}\right)\right)\sim\mathcal{N}\left(c\cdot 0,c^2\left(\frac{t}{c^2}-\frac{s}{c^2}\right)\right)=\mathcal{N}(0,t-s)."/></span>
+
+Where we use the properties of scaling a normal distributed random variable i.e. for $c>0$ and <img class="math inline"  src="https://math.vercel.app?inline= N\sim\mathcal{N}(\mu,\sigma ^2)" /> it follows that <img class="math inline"  src="https://math.vercel.app?inline=c N\sim\mathcal{N}(c\mu,c^2\sigma ^2)" />. Finally, the forth property follows since $g(f)=cf$ is continuous and $h(t)=t/c^2$ is continuous, then for any continuous function $f(s)$ it follows that <img src="https://math.vercel.app?inline=(g \circ f\circ h)=g(f(h(t)))"/> is continuous.
+
+</details>
+
+&nbsp;
+
+>**Proposition B.37.** Let <img src="https://math.vercel.app?inline=(\Omega,\mathcal{F},P)"/> be a given probability space, let <img src="https://math.vercel.app?inline=\mathcal{G}"/> be a sub-sigma-algebra of <img src="https://math.vercel.app?inline=\mathcal{F}"/>, and let $X$ be a square integrable random variable.
+>Consider the problem of minimizing
+><span class="math center"><img src="https://math.vercel.app?from=E\left[(X-Z)^2\right]"/></span>
+>where $Z$ is allowed to vary over the class of all square integrable <img src="https://math.vercel.app?inline=\mathcal{G}"/> measurable random variables. The optimal solution <img src="https://math.vercel.app?inline=\hat{Z}"/> is then given by.
+><span class="math center"><img src="https://math.vercel.app?from=\hat{Z}=E[X\vert\mathcal{G}]."/></span>
+
+**Exercise B.11.** *(Bjork)* Prove proposition B.37 by going along the following lines.
+
+  a. Prove that the "estimation error" <img src="https://math.vercel.app?inline=X-E[X\vert\mathcal{G}]"/> is orthogonal to <img src="https://math.vercel.app?inline=L^2(\Omega,\mathcal{G},P)"/> in the sence that for any <img src="https://math.vercel.app?inline=Z\in L^2(\Omega,\mathcal{G},P)"/> we have
+  <span class="math center"><img src="https://math.vercel.app?from=E[Z\cdot(X-E[X\vert\mathcal{G}])]=0"/></span>
+  b. Now prove the proposition by writing
+  <span class="math center"><img src="https://math.vercel.app?from=X-Z=(X-E[X\vert\mathcal{G}])%2B(E[X\vert\mathcal{G}]-Z)"/></span>
+  and use the result just proved.
+
+<details>
+<summary>**Solution (a).**</summary>
+
+
+
+</details>
+<details>
+<summary>**Solution (b).**</summary>
 
 
 
 </details>
 
-## Week 2
+&nbsp;
+
+## Week 2 
 
 ### Material
 
