--- a/FinKont_main.Rmd
+++ b/FinKont_main.Rmd
@@ -9,8 +9,4 @@ output: html_document
 
 Arbitrage Theory in Continuous Time (Fourth edition)  by Thomas Björk, Oxford University Press (2019).
 
-<iframe src=
-"pdf/FinKont_book.pdf" 
-                width="800" 
-                height="1100">
-</iframe>
+<iframe src="pdf/FinKont_book.pdf"></iframe>
